manager refactor